--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
     <head>
     <title>forwind | <%= @context.downcase%></title>
+
+        <!-- HTML Meta Tags -->
+        <title>forwind | music</title>
+        <meta name="description" content="An Irish/German independent music publisher.">
+
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="http://www.forwind.net/">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="forwind | music">
+        <meta property="og:description" content="An Irish/German independent music publisher.">
+        <meta property="og:image" content="https://s3-eu-west-1.amazonaws.com/forwind-net-images/assets/forwind_logo.svg">
+
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="twitter:domain" content="forwind.net">
+        <meta property="twitter:url" content="http://www.forwind.net/">
+        <meta name="twitter:title" content="forwind | music">
+        <meta name="twitter:description" content="An Irish/German independent music publisher.">
+        <meta name="twitter:image" content="https://s3-eu-west-1.amazonaws.com/forwind-net-images/assets/forwind_logo.svg">
+
+        <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="An independent music publishing label, Berlin, Dublin. " />
         <meta name="keywords" content="Forwind, Jeff Carey, Clang Sayne, James O'Sullivan, CjC, Atom eye, Sonnamble, Fourth Page, Tomonari Nozaki, independent record label, London, electronic music"  />
@@ -32,7 +54,7 @@
                             <li><a href="http://twitter.com/forwindings" target="_blank">Twitter</a></li>
                             <li><a href="http://soundcloud.com/forwind" target="_blank">Soundcloud</a></li>
                             <li><a href="https://www.youtube.com/channel/UC7KlAGrDB_X5BxX4HrRsXHA" target="_blank">YouTube</a></li>
-                        </ul>    
+                        </ul>
                     </nav>
                     <div class="copyright-notice column-block">
                         &#169; Forwind <%= Time.current.year %>
@@ -50,4 +72,3 @@
         </script>
     </body>
 </html>
-
